# porter-bench.c

./: CMakeLists.txt  bench_stem.cpp  porter_bench.c  porter_snowball_bench.cpp
test/: stemmed-bello-gallico.txt
